# bodyecho

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  colors.json  index.html
.claude/: ASSET_GENERATION.md  claude.md  mcp_servers.json
.claude/commands/: generate-asset.md  pixellab.md
.github/workflows/: deploy.yml
assets/characters/582b204c-ad0f-401d-b99a-97ecaf9a0abe/: metadata.json
assets/tiles/: hospital_floor_tile.json
src/: main.rs
