[package]
name = "bodyecho"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.14", features = ["webgl2"] }
bevy_ecs_tilemap = "0.14"
uuid = { version = "1", features = ["v4", "rng-getrandom", "js"] }
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
